# PlanExe

./: .env.docker.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  HOW-THIS-ACTUALLY-WORKS.md  PlanExe.code-workspace  README.md  README_API.md  REAL_TASK_PROGRESS_PLAN.md  check_emojis.py  check_plan_db.py  check_plan_status.py  codebuff.json  debug_api_error.py  debug_background_task.py  debug_create_plan.py  docker-compose.md  docker-compose.yml  endpoint_test_PlanExe_53057f2e-0255-4b81-913b-33b5395eff44.txt  endpoint_test_PlanExe_83e75af3-8b37-4022-9081-a6bccb28ff22.txt  endpoint_test_PlanExe_dac649da-5191-45e6-b9d5-3a805f96e7f1.txt  endpoint_test_PlanExe_ecf3e0e2-dec7-4bb7-a649-5c131c9d0986.txt  fix_double_encoded.py  fix_emoji_bytes.py  fix_emojis.py  fix_malformed_utf8.py  inspect_bytes.py  llm_config.json  llm_config.json.backup  llm_config_alternative.json  llm_config_updated.json  manual_trigger.py  minimal_debug_PlanExe_53057f2e-0255-4b81-913b-33b5395eff44.txt  minimal_debug_PlanExe_83e75af3-8b37-4022-9081-a6bccb28ff22.txt  minimal_debug_PlanExe_dac649da-5191-45e6-b9d5-3a805f96e7f1.txt  minimal_debug_PlanExe_ecf3e0e2-dec7-4bb7-a649-5c131c9d0986.txt  package-lock.json  (+32 more)
.agents/: README.md  (+13 more)
frontend_multiuser/: Dockerfile  README.md  app.py  pyproject.toml  railway.md  railway.toml
frontend_multiuser/src/: app.py  model_taskitem.py  planexe_db_singleton.py  planexe_modelviews.py
frontend_multiuser/templates/: demo_eventsource.html  demo_form_run_via_database_method_get.html  demo_instant_run_in_separate_process.html  index.html  (+4 more)
(+1020 files in other folders)
